fixed spacing of gallery slide show on resize

--- a/src/css/GalleryPhotos.css
+++ b/src/css/GalleryPhotos.css
@@ -222,4 +222,11 @@
     width: 70vw;
     height: fit-content;
   }
+  .gallery-slide-container {
+    margin-top: 5vh;
+  }
+  .gallery-arrow {
+    scale: 0.5;
+    margin-top: 6vw;
+  }
 }
